# rsorder

./: Cargo.toml  README.md  demo.rs  description.md
src/: analyze.rs  lib.rs  main.rs  mermaid.rs  model.rs  order.rs  render.rs
tests/: e2e.rs
tests/golden/: realtest1.deps.json  realtest1.rs  scoped_regions.deps.json  scoped_regions.rs  whole_alpha_both.rs  whole_alphabetical.deps.json  whole_alphabetical.rs  whole_basic.rs  whole_original.deps.json  whole_original.rs  whole_topological.deps.json  whole_topological.rs
tests/input/: realtest1.rs  scoped_regions.rs  whole_basic.rs
